@@ -1,3 +1,8 @@
+Wed Jan 31 00:06:50 2001  George Lebl <jirka@5z.com>
+
+	* panel_config.[ch]: keep a flag around to see if we are updating the
+	  panel ourselves, in which case do not update ourselves.
+
 Wed Jan 31 03:03:40 2001  George Lebl <jirka@5z.com>
 
 	* panel-util.c:  Fix setting of background colors in different
